(library
 (name graphv_gles2_native_impl)
 (package graphv_gles2_native)
 (foreign_stubs (language c) 
    (names gles2_stubs)
    (flags :standard -O2)
  )
 (libraries
   graphv_core_lib
  )
 )

(rule
  (target graphv_gles2_native_impl.ml)
  (deps ../common/graphv_gles2.ml)
  (action
    (copy %{deps} %{target}))
  )

(include ../common/dune.inc)
(include ../../shared/dune.inc)
