(library
 (public_name graphv_gles3_native_impl)
 (foreign_stubs (language c) 
    (names gles3_stubs)
    (flags :standard -O3)
  )
 (libraries
   graphv_core_lib
  )
 )

(rule
  (target fragUniforms.ml)
  (deps ../common/fragUniforms.ml)
  (action
   (copy %{deps} %{target}))
  )

(rule
  (target graphv_gles3_native_impl.ml)
  (deps ../common/graphv_gles3.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target gles3_shaders.ml)
  (deps ../common/gles3_shaders.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target path.ml)
  (deps ../common/path.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target dyn.ml)
  (deps ../common/dyn.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target vertexBuffer.ml)
  (deps ../common/vertexBuffer.ml)
  (action
    (copy %{deps} %{target}))
  )
