(library
 (public_name graphv_gles3_native_impl)
 (foreign_stubs (language c) 
    (names gles3_stubs)
    (flags :standard -O3)
  )
 (libraries
   graphv_core_lib
  )
 )

(rule
  (target graphv_gles3_native_impl.ml)
  (deps ../common/graphv_gles3.ml)
  (action
    (copy %{deps} %{target}))
  )

(include ../common/dune.inc)
(include ../../shared/dune.inc)
