(library
 (public_name graphv_webgl2_impl)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml graphv_core_lib)
)

(rule
  (target fragUniforms.ml)
  (deps ../common/fragUniforms.ml)
  (action
   (copy %{deps} %{target}))
  )

(rule
  (target graphv_webgl2_impl.ml)
  (deps ../common/graphv_gles3.ml)
  (action
    (copy %{deps} %{target}))
  )
