(library
 (public_name graphv_webgl2_impl)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml graphv_core_lib)
)

(rule
  (target fragUniforms.ml)
  (deps ../common/fragUniforms.ml)
  (action
   (copy %{deps} %{target}))
  )

(rule
  (target graphv_webgl2_impl.ml)
  (deps ../common/graphv_gles3.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target gles3_shaders.ml)
  (deps ../common/gles3_shaders.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target path.ml)
  (deps ../common/path.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target dyn.ml)
  (deps ../common/dyn.ml)
  (action
    (copy %{deps} %{target}))
  )

(rule
  (target vertexBuffer.ml)
  (deps ../common/vertexBuffer.ml)
  (action
    (copy %{deps} %{target}))
  )
